# RSDKv5DecompMods

./: .gitmodules  README.md  RSDKv5DecompMods.sln  meson.build
RSDKv5SteamAPI/: Hook.hpp  Mod.cpp  Mod.hpp  RSDKv5SteamAPI.vcxproj  RSDKv5SteamAPI.vcxproj.filters  Steam.cpp  Steam.hpp  dllmain.cpp  framework.h
RSDKv5SteamAPI/include/: Helpers.h
S3KExtensions/: Callbacks.cpp  Callbacks.hpp  Helpers.cpp  Helpers.hpp  MissionInfo.cpp  MissionInfo.hpp  S3KExtensions.cpp  S3KExtensions.hpp  S3KExtensions.vcxproj  S3KExtensions.vcxproj.filters  dllmain.cpp
S3KExtensions/Objects/: DebugMenu.cpp  DebugMenu.hpp  DrawHelpers.cpp  DrawHelpers.hpp  HUD.cpp  HUD.hpp  Mission.cpp  Mission.hpp  OptionsMenu.cpp  OptionsMenu.hpp  PauseMenu.cpp  PauseMenu.hpp  Player.cpp  Player.hpp  S3K_SS_Player.cpp  S3K_SS_Player.hpp  S3K_SaveMenu.cpp  S3K_SaveMenu.hpp  S3K_SaveSlot.cpp  S3K_SaveSlot.hpp  SignPost2.cpp  SignPost2.hpp
S3KOptionsMenu/: Helpers.c  Helpers.h  Mod.c  S3K.h  S3KOptionsMenu.vcxproj  S3KOptionsMenu.vcxproj.filters
S3KOptionsMenu/Objects/: OptionsMenu.c  OptionsMenu.h
S3KPauseMenu/: Mod.c  S3KPauseMenu.vcxproj  S3KPauseMenu.vcxproj.filters
S3KPauseMenu/Objects/: PauseMenu.c  PauseMenu.h
